# GLCM-OpenCV

./: CMakeLists.txt
cmake/: GLCM-config.cmake.in  cl2cpp.cmake
opencl/: glcm.cl  glcm_old.cl
src/: glcm.cpp  glcm.h  glcm_dispatch.cpp  glcm_dispatch.hpp  ocl_defs.hpp
test/: benchmark_opencl_execution.cpp  test_opencl_execution.cpp
